2006-05-18  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_ReadGedcom.py: fix parsing level so that CHAR is not 
	skipped
	* src/DisplayTabs/_AddrEmbedList.py: fix city/state mapping (romjerome)
	* src/glade/gramps.glade: fix media ref dialog with warn box
	* src/Filters/_PersonSidebarFilter.py (PersonSidebarFilter.clear): 
	fix clearing of combobox

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_ReadXML.py (start_childref): Typo.
	* src/GrampsDb/_ReadGrdb.py: Add repos, modularize.
	* src/ViewManager.py: Reorder calls to make work with ArgHandler.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsCfg.py: pychecker fixes
	* src/GrampsWidgets.py: pychecker fixes
	* src/glade/gramps.glade: fix text entry -> label
	* src/NameDisplay.py: pychecker fixes
	* src/DisplayState.py: pychecker fixes
	* src/GrampsDisplay.py: pychecker fixes
	* src/DateEdit.py: pychecker fixes
	* src/gramps_main.py: pychecker fixes
	* src/DbLoader.py: pychecker fixes

2006-05-17  Alex Roitman  <shura@gramps-project.org>
	* src/ArgHandler.py: Adapt to recent changes.
	* src/BasicUtils.py (update_empty): Clean up callback.
	* src/GrampsDb/_ReadGedcom.py: Clean up callback.
	* src/GrampsDb/_GrampsDbBase.py (DbState.change_database_noclose):
	Add new method.
	* src/Makefile.am (gdir_PYTHON): Ship new file.
	* src/DbLoader.py: add new module.
	* src/ViewManager.py: Use DbLoader.
	* src/DisplayState.py (load): Do not perform post_load tasks.
	* src/GrampsDb/_GrampsBSDDB.py (GrampsBSDDB.load): close if
	version is incopmatible.

2006-05-17  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDbBase.py: remove place name storage
	* src/Editors/_EditLdsOrd.py: new SelectPlace interface
	* src/glade/gramps.glade: new select place interface changes
	* src/Editors/_EditPlace.py: new SelectPlace interface
	* src/Editors/_EditEventRef.py: new SelectPlace interface, remove
	old code
	* src/Editors/_EditEvent.py: new SelectPlace interface