@@ -12,6 +12,15 @@ run "./configure && make". However, if you're building from the SVN,
 the configure is not present. You should auto-generate it by
 running ./autogen.sh and then "make" and, finally, "make install".
 
+Running ./autogen.sh on this branch of gramps requires the following
+packages to be installed:
+   * automake-1.9
+   * gnome-common
+   * intltool
+   * libglib2.0-dev (may be called differently on other distros) and
+maybe something else. If autogen.sh fails, it should inform you what's
+missing.
+
 
 Regular vs local installation
 -----------------------------
@@ -35,6 +44,38 @@ YOU MUST INSTALL GCONF SCHEMAS AND MIME TYPES.
 YOU HAVE BEEN WARNED!
 
 
+Installing under non-default prefix
+-----------------------------------
+As hinted above, the gconf schemas and mime types for gramps
+MUST be properly installed. The "proper install" means installing
+them where gconfd and shared mime system, respectively, will
+find them.
+
+By default, gconfd will look in these places:
+   1. Whatever is returned by running:
+      $ gconftool-2 --get-default-source
+   2. The xml::$HOME/.gconf        : this is a per-user setup, not system-wide
+      or  xml:merged:$HOME/.gconf  : this is a per-user setup, not system-wide
+There is a number of ways to let gconfd know where else
+to look, but this is outside the scope of installing gramps.
+
+By default, the shared mime systems will look in these places:
+   1. /usr/share/mime
+   2. /usr/local/share/mime   : this may be broken on some systems
+   3. $HOME/.local/share/mime : this is a per-user setup, not system-wide
+Likewise, there's a number of ways to instruct the shared mime system
+to look in other places, but this is the whole other story.
+
+So if you install some place other than /usr/share, you will most
+likely need to add this option to autogen.sh/configure scripts:
+   --with-mime-dir=/usr/share/mime
+
+Using the --prefix=/usr/share and installing as a root will most
+likely do everything correctly, so no extra care needs to be
+taken. You should take extra care only if you are installing under
+something like --prefix=/usr/local/my_gramps, /var/gramps123/blah, etc.
+
+
 Packager's issues
 ------------------
 The above mentioned gconf schemas and mime types must be installed.
@@ -52,5 +93,5 @@ This argument should disable postinstall calls made during
 make install, and print a nasty warning during configure.
 IT IS PACKAGER'S RESPONSIBILITY to follow the advice given
 by the configure output and to copy the appropriate code
-from the src/data/Makefile.am into the pos-tinstall (and post-uninstall)
+from the src/data/Makefile.am into the post-install (and post-uninstall)
 of the particular packaging system.
