@@ -1,3 +1,7 @@
+2006-05-18  Alex Roitman  <shura@gramps-project.org>
+	* INSTALL: Clarify; list build-dependencies.
+	* src/GrampsDb/_ReadGrdb.py: Update progress.
+
 2006-05-18  Don Allingham  <don@gramps-project.org>
 	* src/GrampsDb/_ReadGedcom.py: fix parsing level so that CHAR is not 
 	skipped
